Fix mobile carousel width distortion

--- a/scss/_carousel.scss
+++ b/scss/_carousel.scss
@@ -102,7 +102,9 @@
       }
 
       img {
-        min-height: 400px;
+        max-height: 400px;
+        height: 100%;
+        width: auto;
       }
 
       h3 {
